<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_Z4_Params" Id="{79853cb3-3690-0ee8-20a0-8a75ebc3147d}">
    <Declaration><![CDATA[TYPE ST_Z4_Params :
STRUCT
	tDrilling	:	TIME	:= T#4S;	// durata della fase di foratura
	tDelayToZ5	:	TIME	:= T#1S;	// ritardo per arrivare a Z5
	tStopDelay	:	TIME	:= T#1S;	// permanenza nello stato Stop
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>